tests/fixtures/invalid/pow_bool_str_float.py
# Cannot call pow() with Bool, Str, Float
x = pow(True, "hello", 1.0)
